// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CcrShard that is renders an exception properly 1`] = `
<EuiPanel>
  <Status
    formattedLeader="leader on remote"
    oldestStat={
      Object {
        "failed_read_requests": 0,
        "operations_written": 2976,
      }
    }
    stat={
      Object {
        "failed_read_requests": 0,
        "follower_global_checkpoint": 3049,
        "follower_index": "follower",
        "follower_max_seq_no": 3049,
        "last_requested_seq_no": 3049,
        "leader_global_checkpoint": 3049,
        "leader_index": "leader",
        "leader_max_seq_no": 3049,
        "mapping_version": 2,
        "number_of_concurrent_reads": 1,
        "number_of_concurrent_writes": 0,
        "number_of_failed_bulk_operations": 0,
        "number_of_queued_writes": 0,
        "number_of_successful_bulk_operations": 3050,
        "number_of_successful_fetches": 3050,
        "operations_received": 3050,
        "operations_written": 3050,
        "read_exceptions": Array [
          Object {
            "reason": "not sure but something happened",
            "type": "something_is_wrong",
          },
        ],
        "shard_id": 0,
        "time_since_last_read_millis": 9402,
        "total_fetch_time_millis": 44128980,
        "total_index_time_millis": 41827,
        "total_transferred_bytes": 234156,
      }
    }
  />
</EuiPanel>
`;

exports[`CcrShard that it renders normally 1`] = `
<EuiPage>
  <EuiPageBody>
    <EuiPanel>
      <Status
        formattedLeader="leader on remote"
        oldestStat={
          Object {
            "failed_read_requests": 0,
            "operations_written": 2976,
          }
        }
        stat={
          Object {
            "failed_read_requests": 0,
            "follower_global_checkpoint": 3049,
            "follower_index": "follower",
            "follower_max_seq_no": 3049,
            "last_requested_seq_no": 3049,
            "leader_global_checkpoint": 3049,
            "leader_index": "leader",
            "leader_max_seq_no": 3049,
            "mapping_version": 2,
            "number_of_concurrent_reads": 1,
            "number_of_concurrent_writes": 0,
            "number_of_failed_bulk_operations": 0,
            "number_of_queued_writes": 0,
            "number_of_successful_bulk_operations": 3050,
            "number_of_successful_fetches": 3050,
            "operations_received": 3050,
            "operations_written": 3050,
            "read_exceptions": Array [],
            "shard_id": 0,
            "time_since_last_read_millis": 9402,
            "total_fetch_time_millis": 44128980,
            "total_index_time_millis": 41827,
            "total_transferred_bytes": 234156,
          }
        }
      />
    </EuiPanel>
    <EuiSpacer
      size="m"
    />
    <AlertsCallout />
    <EuiSpacer
      size="m"
    />
    <EuiFlexGroup
      wrap={true}
    >
      <EuiFlexItem
        key="0"
        style={
          Object {
            "minWidth": "45%",
          }
        }
      >
        <EuiPanel>
          <MonitoringTimeseriesContainer />
        </EuiPanel>
      </EuiFlexItem>
      <EuiFlexItem
        key="1"
        style={
          Object {
            "minWidth": "45%",
          }
        }
      >
        <EuiPanel>
          <MonitoringTimeseriesContainer />
        </EuiPanel>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiHorizontalRule />
    <EuiAccordion
      arrowDisplay="left"
      buttonContent={
        <EuiTitle>
          <h2>
            <FormattedMessage
              defaultMessage="Advanced"
              id="xpack.monitoring.elasticsearch.ccrShard.latestStateAdvancedButtonLabel"
              values={Object {}}
            />
          </h2>
        </EuiTitle>
      }
      buttonElement="button"
      element="div"
      id="ccrLatestStat"
      initialIsOpen={false}
      isLoading={false}
      isLoadingMessage={false}
      paddingSize="l"
    >
      <EuiTitle
        size="s"
      >
        <h2>
          September 27, 2018 9:32:09 AM
        </h2>
      </EuiTitle>
      <EuiHorizontalRule />
      <EuiCodeBlock
        language="json"
      >
        {
  "read_exceptions": [],
  "follower_global_checkpoint": 3049,
  "follower_index": "follower",
  "follower_max_seq_no": 3049,
  "last_requested_seq_no": 3049,
  "leader_global_checkpoint": 3049,
  "leader_index": "leader",
  "leader_max_seq_no": 3049,
  "mapping_version": 2,
  "number_of_concurrent_reads": 1,
  "number_of_concurrent_writes": 0,
  "number_of_failed_bulk_operations": 0,
  "failed_read_requests": 0,
  "operations_written": 3050,
  "number_of_queued_writes": 0,
  "number_of_successful_bulk_operations": 3050,
  "number_of_successful_fetches": 3050,
  "operations_received": 3050,
  "shard_id": 0,
  "time_since_last_read_millis": 9402,
  "total_fetch_time_millis": 44128980,
  "total_index_time_millis": 41827,
  "total_transferred_bytes": 234156
}
      </EuiCodeBlock>
    </EuiAccordion>
  </EuiPageBody>
</EuiPage>
`;
